# teddy

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
aho_corasick/: struct.AcAutomaton.html  struct.FullAcAutomaton.html  struct.Match.html  struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html  trait.Automaton.html  trait.Transitions.html
benches/: random.rs  sherlock.rs  text_gen.py
benches/data/: needle_num_16_3_1024.txt  needle_num_32_3_1024.txt  needle_num_8_3_1024.txt  rarity_8_1_1024.txt  rarity_8_1_128.txt  rarity_8_1_16.txt  rarity_8_1_8196.txt  rarity_8_2_1024.txt  rarity_8_2_128.txt  rarity_8_2_16.txt  rarity_8_2_8196.txt  rarity_8_3_1024.txt  rarity_8_3_128.txt  rarity_8_3_16.txt  rarity_8_3_8196.txt  text_len_8_1_65536.txt  text_len_8_2_65536.txt  text_len_8_3_65536.txt
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr3.html  fn.memrchr.html  index.html
src/: core.rs  fallback.rs  lib.rs  mask.rs  teddy128.rs  teddy_simd.rs
src/aho_corasick/: autiter.rs.html  full.rs.html  lib.rs.html
src/memchr/: lib.rs.html
src/teddy/: fallback.rs.html  lib.rs.html
src/x86/: core.rs  mask.rs  mod.rs  teddy_simd.rs
teddy/: Teddy.t.html  index.html  sidebar-items.js  struct.Match.html  struct.Teddy.html
teddy/fallback/: struct.Teddy.html
(+14 files in other folders)
